--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 	<footer>
 		<h1>Submit issue / feature request:</h1>
-    <form name="submit_issue" action="javascript:GetInfo()" method="post" style="text-align: center;">
+    <form name="submit_issue" action="javascript:GetInfo()" method="post">
       <p>
 				First Name:
 				<br />
